--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />		
+		
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="color-scheme" content="light dark">
+
+		<title>Albertus Angga Raharja - albertus.dev</title>
+
+		<link rel="stylesheet" href="%sveltekit.assets%/font/font.css" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
